2010-08-31  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/generator: new sub directory for generators' header
	files.
	* include/generator/TopologyGenerator.h: New file.
	* include/generator/ContextGenerator.h: Likewise.
	* include/generator/DiamondTopoGenerator.h: Likewise.
	* include/generator/DiamondOptTopoGenerator.h: Likewise.
	* include/generator/dmcsGen.h: Likewise.

	* src/dmcsGen.cpp: New file.
	* src/staticGen.cpp: Likewise.

	* include/Makefile.am: Add new header files for dmcsGen. Remove
	header files from genTest.

	* src/Makefile.am: add dmcsGen, remove genTest.

	* src/ContextGenerator: light weight implementation. No more use
	of Context, QueryPlan.

2010-08-02  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/ClaspResultOnlineParser.cpp: Only start instantiating things
	when input stream is good.

	* include/Makefile.am (noinst_HEADERS): Add ClaspResultOnlineParser.tcc.

	* include/ClaspResultOnlineParser.h: Move ClaspResultOnlineGrammar
	to tcc file.
	Add ClaspResultOnlineGrammar::reset() method.
	* include/ClaspResultOnlineParser.tcc: Likewise.

2010-08-02  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/tests/Makefile.am: Typo.

	* include/ClaspResultOnlineParser.h: Update using getNextAnswer()
	and return NULL at the end.k
	* src/ClaspResultOnlineParser.cpp: Likewise.
	* src/tests/testClaspResultOnlineParser.cpp: Likewise.

2010-08-02  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/ClaspResultBuilder.tcc: Typo.

	* src/tests/testClaspOnlineParser.cpp: Test getNextAnswer() strategy.

	* include/ClaspResultOnlineParser.h: New file.
	* src/ClaspResultOnlineParser.cpp: Likewise.

	* src/Makefile.am: add ClaspResultOnlineParser.cpp

	* include/Makefile.am: add ClaspResultOnlineParser.h

2010-07-25  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/tests/testClaspOnlineParser.cpp: Make it a Boost.Test case.
	Rename.
	* src/tests/clasp-parser-full.cpp: Likewise.

	* src/tests/result.sat: Move to examples.
	* examples/result.sat: Likewise.
